# minigit

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  jsconfig.json  package-lock.json  package.json  tsconfig.json  vcpkg.json
include/minigit/cli/: command.hpp  parser.hpp  registry.hpp
include/minigit/format/: colors.hpp  output.hpp
src/: constants.js  main.cpp
src/cli/: parseCLI.ts  parser.cpp  registry.cpp  registry.ts
src/cli/commands/: add_command.cpp  branch_command.cpp  cat_file_command.cpp  commit_command.cpp  diff_command.cpp  hash_object_command.cpp  init_command.cpp  log_command.cpp  ls_tree_command.cpp  restore_command.cpp  status_command.cpp  write_tree_command.cpp
src/commands/: AddCommand.ts  BranchCommand.ts  CatFileCommand.ts  CommitCommand.ts  DiffCommand.ts  HashObjectCommand.ts  InitCommand.ts  LSTreeCommand.ts  LogCommand.ts  RestoreCommand.ts  StatusCommand.ts  WriteTreeCommand.ts  add.js  add.ts  branch.ts  cat-file.js  cat-file.ts  commit.ts  diff.ts  hash-object.js  hash-object.ts  init.js  init.ts  log.ts  ls-tree.js  ls-tree.ts  restore.js  restore.ts  status.ts  write-tree.js  write-tree.ts
src/common/: constants.ts  types.ts  utils.ts
src/common/helpers/: colors.ts  errorHandler.ts  logger.ts
src/common/util/: paths.cpp
src/common/utils/: cliUtils.ts  headUtils.ts  workTreeUtils.ts
src/core/: index.js  init.ts
src/core/commit/: commit.ts  getBranchList.ts  log.ts  utils.ts
src/core/diff/: computeIndexVsWorkDiff.ts  diffAlgo.ts  diff_engine.cpp  (+1 more)
src/format/: colors.cpp  output.cpp
(+73 files in other folders)
